--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,11 +8,11 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>ccj - 首页</title>
+		<title>ccj - 关于</title>
 	</head>
 	<body>
 		<a href="/">首页</a>
 		<a href="/about/">关于</a>
-		<h1>你认识ccj吗？</h1>
+		<h1>让你领略下ccj有多菜吧！</h1>
 	</body>
 </html>
