--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,14 +12,15 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="bg-gray-100 text-gray-900 flex flex-col min-h-screen">
+  <body class="bg-gray-100 text-pink-500 flex flex-col min-h-screen">
     <header class="bg-blue-600 text-white p-4">
       <div class="container mx-auto">
-        <h1 class="text-xl">我的 Astro 博客</h1>
+        <h1 class="text-xl">ccj 的奇妙 Astro 冒险
+        </h1>
         <!-- 导航链接可以在这里添加 -->
       </div>
     </header>
-    <main class="flex-grow container mx-auto p-4">
+    <main class="flex-grow container mx-auto p-10">
       <slot />
     </main>
     <footer class="bg-gray-800 text-white p-4 text-center">
