--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,20 +1,13 @@
 ---
-
+import Layout from '../layouts/Layout.astro';
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>ccj - 首页</title>
-	</head>
-	<body>
-		<a href="/">首页</a>
-		<a href="/about/">关于</a>
-		<a href="/blog/">博客</a>
-		<h1>我的 Astro 学习博客</h1>
-		<p>在这里，我将分享我的 Astro 学习之旅。</p>
-	</body>
-</html>
+<Layout title="ccj - 博客">
+  <h1 class="text-3xl font-bold mb-4">我的 Astro 学习博客</h1>
+  <p class="mb-2">在这里，我将分享我的 Astro 学习之旅。</p>
+  <nav class="mt-4">
+    <a href="/" class="text-blue-600 hover:underline mr-4">首页</a>
+    <a href="/about/" class="text-blue-600 hover:underline mr-4">关于</a>
+    <a href="/blog/" class="text-blue-600 hover:underline">博客</a>
+  </nav>
+</Layout>
