--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="ccj - 首页">
-  <h1 class="text-3xl font-bold mb-4">欢迎来到我的 Astro 博客!</h1>
+  <h1 class="text-3xl font-bold mb-4">欢迎来到 ccj 的博客!</h1>
   <p class="mb-2">这是一个使用 Astro 和 Tailwind CSS 构建的简单博客首页。</p>
   <p>你认识ccj吗？</p>
   <nav class="mt-4">
